# kubernetes-cluster-observer-and-controller-using-Rust

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Build_Fix_MSVC_Toolchain.md  Kubernetes_Observability_Controller_Progress.md  Kubernetes_Observability_Policy_Controller_Roadmap.md  Rust_Borrowing_Rules.md  Rust_Foundations_for_Kubernetes_DevOps.md  Step_10_Multi_Cluster_Governance.md  Step_1_Code_Explanation.md  Step_2_Kubernetes_Integration.md  Step_3_DevOps_Analyzer_Engine.md  Step_4_Detailed_Developer_Documentation.md  Step_4_Kubernetes_Watch_Engine.md  Step_4_Testing.md  Step_5_Kubernetes_Operator.md  Step_6_Policy_Enforcement.md  Step_7_Admission_Webhook.md  Step_8_Prometheus_Expansion.md  Step_9_HA_Production_Hardening.md
helm/kube-devops/: Chart.yaml  values.yaml
helm/kube-devops/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment-reconcile.yaml  deployment-watch.yaml  namespace.yaml  (+12 more)
kube-tests/: clusterrole.yaml  clusterrolebinding.yaml  deployment-reconcile.yaml  deployment-watch.yaml  deployment-webhook.yaml  grafana-dashboard-configmap.yaml  namespace.yaml  pdb-reconcile.yaml  pdb-watch.yaml  pdb-webhook.yaml  sample-devopspolicy.yaml  service-reconcile.yaml  service-watch.yaml  service-webhook.yaml  serviceaccount.yaml  servicemonitor-reconcile.yaml  servicemonitor-watch.yaml  servicemonitor-webhook.yaml  test-pod.yaml  webhook-config.yaml
src/: admission.rs  bundles.rs  cli.rs  crd.rs  enforcement.rs  governance.rs  lib.rs  main.rs  multi_cluster.rs
src/commands/: analyze.rs  check.rs  crd.rs  deploy.rs  list.rs  mod.rs  multi_cluster.rs  observability.rs  policy.rs  reconcile.rs  version.rs  watch.rs  webhook.rs
tests/: admission_integration.rs  enforcement_integration.rs  governance_integration.rs  multi_cluster_integration.rs  operator_integration.rs  severity_integration.rs
tests/common/: mod.rs
