[package]
name = "kube-devops"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

kube = { version = "0.88", features = ["runtime", "derive"] }
kube-runtime = "0.88"
k8s-openapi = { version = "0.21", features = ["v1_26"] }

axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
prometheus = "0.13"

rcgen = "0.13"
rustls-pemfile = "2"
base64 = "0.22"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
